eog-list-store: unref a dangling EogImage reference

https://bugzilla.gnome.org/show_bug.cgi?id=674284